--- a/src/scss/MainTable.scss
+++ b/src/scss/MainTable.scss
@@ -1,5 +1,6 @@
+@import 'vars.scss';
+
 table {
-  --accent-color: #01987A;
   --border-animation-duration: 0.1s;
 
   table-layout: fixed;
@@ -27,10 +28,10 @@ table {
     transition-duration: var(--border-animation-duration);
 
     &:hover {
-      border-bottom: 2px solid var(--accent-color);
+      border-bottom: 2px solid var(--main-color);
   
       background-color: #f5f5f5;
-      color: var(--accent-color);
+      color: var(--main-color);
     }
   }
 
@@ -79,9 +80,9 @@ table {
     transition-duration: 0.3s;
 
     &:hover {
-      border-bottom: 4px solid var(--accent-color);
+      border-bottom: 4px solid var(--main-color);
 
-      color: var(--accent-color);
+      color: var(--main-color);
     }
   }
 
