--- a/src/scss/NavBar.scss
+++ b/src/scss/NavBar.scss
@@ -1,3 +1,5 @@
+@import 'vars.scss';
+
 nav {
   display: flex;
 
@@ -9,7 +11,7 @@ nav {
     display: block;
     width: 100%;
 
-    border-bottom: 1px solid #01987A;
+    border-bottom: 1px solid var(--main-color);
 
     text-align: center;
 
@@ -19,13 +21,13 @@ nav {
     transition-duration: 0.1s;
 
     &:hover {
-      border-bottom: 3px solid #01987A;
+      border-bottom: 3px solid var(--main-color);
 
       background-color: #f5f5f5;
     }
   }
 
   .active {
-    border-bottom: 3px solid #01987A;
+    border-bottom: 3px solid var(--main-color);
   }
 }
